refactor(posts): deepen Java/DSA articles with topic-specific examples, dry runs, and production guidance